fixed spacing

--- a/style.css
+++ b/style.css
@@ -87,10 +87,13 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
    
   a.button2{
     display:inline-block;
-    padding:0.7em 3em;
+    padding:0.9em 10em;
     border:0.16em solid #FFFFFF;
     margin:0 0.3em 0.3em 0;
-    padding-right: 45%
+    padding-right: 10%;
+    padding-left: 10%;
+    margin-top: 1%;
+    margin-left: 35%;
     box-sizing: border-box;
     text-decoration:none;
     text-transform:uppercase;
